--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-express-server": "^0.4.17",
     "grunt-mocha-test": "^0.11.0",
     "grunt-simple-mocha": "^0.4.0",
+    "jquery": "^1.11.1",
     "matchdep": "^0.3.0"
   }
 }
