--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "grunt-express-server": "^0.4.17",
     "grunt-mocha-test": "^0.11.0",
     "grunt-simple-mocha": "^0.4.0",
+    "handlebars": "^1.3.0",
+    "hbsfy": "^1.3.2",
     "matchdep": "^0.3.0"
   }
 }
