--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "browserify": "^4.1.10",
     "chai": "^1.9.1",
+    "debowerify": "^0.7.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^2.1.0",
     "grunt-casper": "^0.3.9",
