--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chai": "^1.9.1",
     "debowerify": "^0.7.1",
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^0.7.5",
     "grunt-browserify": "^2.1.0",
     "grunt-casper": "^0.3.9",
     "grunt-contrib-clean": "^0.5.0",
