--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-simple-mocha": "^0.4.0",
     "handlebars": "^1.3.0",
     "hbsfy": "^1.3.2",
-    "matchdep": "^0.3.0"
+    "matchdep": "^0.3.0",
+    "socket.io": "^1.0.6"
   }
 }
