--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "grunt-browserify": "^2.1.0",
     "grunt-casper": "^0.3.9",
     "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
@@ -33,6 +34,7 @@
     "handlebars": "^1.3.0",
     "hbsfy": "^1.3.2",
     "matchdep": "^0.3.0",
-    "socket.io": "^1.0.6"
+    "socket.io": "^1.0.6",
+    "uglifyify": "^2.5.0"
   }
 }
